# HK2019Skogforsk

./: .gitignore  README.md
devel/: .catkin
devel/lib/pkgconfig/: testrig.pc
devel/lib/testrig/: motor_controller_node
src/hktest/: CMakeLists.txt  package.xml  torun
src/pcl/: CMakeLists.txt  package.xml
src/sampling/: CMakeLists.txt  package.xml
src/testrig/: CMakeLists.txt  README.md  package.xml
src/testrig/arduino_code/controller/: .controller.ino.swp  Waists2.ino  controller.ino
src/testrig/config/: diffdrive.yaml  joints.yaml
src/testrig/launch/: .goutputstream-JIGFB0  .goutputstream-RK02B0  .testrig.launch.swm  .testrig.launch.swn  .testrig.launch.swo  .testrig.launch.swp  demo_sensor.launch  demo_xbox.launch  grid_map_usr.launch  sim.launch  testrig.launch  testrig_all.launch  testrig_playback.launch  testrig_sample.launch  testrig_zed.launch  testrig_zed_lidar.launch  testrig_zed_lidar_voxel.launch  testrig_zed_lidar_voxel_sim.launch  testrig_zed_point.launch  xbox.launch
src/testrig/scripts/: keyboard_pin_node.py  keyboard_wsad_node.py  keyboard_wsad_node2.py  topic_listener.cpp
src/testrig/src/: .goutputstream-C6R7A0  .motor_controller_node.cpp.swp  action_decider_node.py  astar.py  coord_transform_map_to_rig.py  coordinate_list.py  extract_map_info.py  global_path.py  motor_controller_node.cpp  pose_calc  pose_calc.py  quaternion_to_euler.py  turn_node.py  turn_radius_node.py
src/testrig/stl/: bak.stl  mitten.stl  wheel.stl
src/testrig/urdf/: rig.gazebo.xacro  rig.urdf.xacro
src/xbox/: CMakeLists.txt  package.xml
(+47 files in other folders)
