<?xml version="1.0"?>
<package format="2">
  <name>testrig</name>
  <version>1.0.0</version>
  <description>Package for testrig control - motors controller.</description>

  <author email="tomaszuk@kth.se">Michal Tomaszuk</author>

  <maintainer email="tomaszuk@kth.se">Michal Tomaszuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
